--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Qendrim Behrami",
   "license": "MIT",
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
@@ -21,5 +22,8 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
+  },
+  "dependencies": {
+    "uuid": "^9.0.1"
   }
 }
