--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "webpack-dev-server": "^5.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "font-awesome": "^4.7.0",
     "uuid": "^9.0.1"
   }
 }
